@@ -282,7 +282,6 @@ main (int   argc,
       char *argv[])
 {
   g_type_init ();
-  g_thread_init (0);
   g_test_init (&argc, &argv, NULL);
 
   g_test_add_func ("/data-input-stream/read-lines-LF", test_read_lines_LF);
