@@ -3,7 +3,7 @@ include $(top_srcdir)/Makefile.decl
 INCLUDES = -g -I$(top_srcdir) -I$(top_srcdir)/glib $(GLIB_DEBUG_FLAGS)
 
 noinst_PROGRAMS = $(TEST_PROGS)
-progs_ldadd     = $(top_builddir)/glib/libglib-2.0.la
+progs_ldadd     = $(top_builddir)/glib/libglib-2.0.la 
 
 
 TEST_PROGS       += testing
